K8's/chat-svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-svc
  labels:
    app: chat-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-svc
  template:
    metadata:
      labels:
        app: chat-svc
    spec:
      containers:
      - name: chat-svc
        image: us-central1-docker.pkg.dev/celestial-baton-441615-q8/gig-space/chat-svc:latest 
        ports:
        - containerPort: 8085
      volumes:
      - name: env-volume
        secret:
          secretName: gig-space-secret
---
apiVersion: v1
kind: Service
metadata:
  name: chat-svc
  labels:
    app: chat-svc
spec:
  selector:
    app: chat-svc
  ports:
  - protocol: TCP
    port: 8085
    targetPort: 8085
  type: ClusterIP
