K8's/gig-svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gig-svc
  labels:
    app: gig-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gig-svc
  template:
    metadata:
      labels:
        app: gig-svc
    spec:
      containers:
      - name: gig-svc
        image: us-central1-docker.pkg.dev/celestial-baton-441615-q8/gig-space/gig-svc:latest
        ports:
        - containerPort: 8082
      volumes:
      - name: env-volume
        secret:
          secretName: gig-space-secret
---
apiVersion: v1
kind: Service
metadata:
  name: gig-svc
  labels:
    app: gig-svc
spec:
  selector:
    app: gig-svc
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
    type: ClusterIP
