K8's/notification-svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-svc
  labels:
    app: notification-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-svc
  template:
    metadata:
      labels:
        app: notification-svc
    spec:
      containers:
      - name: notification-svc
        image: us-central1-docker.pkg.dev/celestial-baton-441615-q8/gig-space/notification-svc:latest # Replace with your image path
        ports:
        - containerPort: 9090
      volumes:
      - name: env-volume
        secret:
          secretName: gig-space-secret
---
apiVersion: v1
kind: Service
metadata:
  name: notification-svc
  labels:
    app: notification-svc
spec:
  type: ClusterIP
  selector:
    app: notification-svc
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
