K8's/payment-svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-svc
  labels:
    app: payment-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-svc
  template:
    metadata:
      labels:
        app: payment-svc
    spec:
      containers:
      - name: payment-svc
        image: us-central1-docker.pkg.dev/celestial-baton-441615-q8/gig-space/payment-svc:latest
        ports:
        - containerPort: 8084
      volumes:
      - name: env-volume
        secret:
          secretName: gig-space-secret
---
apiVersion: v1
kind: Service
metadata:
  name: payment-svc
  labels:
    app: payment-svc
spec:
  selector:
    app: payment-svc
  ports:
  - protocol: TCP
    port: 8084
    targetPort: 8084
  type: ClusterIP
