K8's/user-svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-svc-deployment
  labels:
    app: user-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-svc
  template:
    metadata:
      labels:
        app: user-svc
    spec:
      containers:
      - name: user-svc
        image: us-central1-docker.pkg.dev/celestial-baton-441615-q8/gig-space/user-svc:latest
        ports:
        - containerPort: 8080
      volumes:
      - name: env-volume
        secret:
          secretName: gig-space-secret
---
apiVersion: v1
kind: Service
metadata:
  name: user-svc-service
  labels:
    app: user-svc
spec:
  type: ClusterIP
  selector:
    app: user-svc
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
