K8's/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flexi-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - ashif.online
    secretName: flexi-cert
  rules:
  - host: ashif.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway-service
            port:
              number: 8081
